Add DMing players